--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ UA-26459329-1
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
                             GIZONEZKOEN BAINUJANTZIA<br>bañador masculino</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Lehiaketetan erabiltzeko taldeko bainujantzi ofiziala. Bainujantziak luzatuta eta estu egon behar du.<br><br><em>Bañador oficial del club para utilizar en competición. El bañador a de quedar estirado y ajustado.</em></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Lehiaketetan erabiltzeko taldeko bainujantzi ofiziala. Bainujantziak luzatuta eta estu egon behar du.<br><br><em>Bañador oficial del club para utilizar en competición. El bañador a de quedar estirado y ajustado.</em></p><div><br></div><div><a href="javascript:OpenModal('DS-Gizonezkoak-masculino')" class="text-primary">Neurrien Gida - Guía de Tallas</a></div><div><br></div><p></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="5K5N89VKNT6FU">
@@ -313,7 +313,7 @@ UA-26459329-1
                         <h4 class="card-title mbr-fonts-style display-5">EMAKUMEZKOEN BAINUJANTZIA
 <div>bañador femenino</div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Lehiaketetan erabiltzeko taldeko bainujantzi ofiziala. Bainujantziak luzatuta eta estu egon behar du
-<br><br><em>Bañador oficial del club para utilizar en competición. El bañador a de quedar estirado y ajustado.</em></p>
+<br><br><em>Bañador oficial del club para utilizar en competición. El bañador a de quedar estirado y ajustado.</em><br><br><a href="javascript:OpenModal('DS-emkumezkoak-femenino')" class="text-primary">Neurrien Gida - Guía de Tallas</a><br><br></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="7EZENFGC4DNDE">
@@ -409,6 +409,112 @@ UA-26459329-1
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="1275">
+
+	<style>
+	/* Let's not animate the contents of modal windows */
+	.no-anim {
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
+	</style>
+
+	
+	
+	<div><div class="modal fade" id="DS-Gizonezkoak-masculino" tabindex="-1" role="dialog" aria-labelledby="DS-Gizonezkoak-masculinoLabel" aria-hidden="true">  <div class="modal-dialog  modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="DS-Gizonezkoak-masculinoLabel">DS neurriak gizonezkoak - Medidas masculinas DS</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="DS-Gizonezkoak-masculino_body"><img src="https://1.bp.blogspot.com/-SMPhzptjyY0/X7z4sLHcihI/AAAAAAAA1cQ/iIMakEJx9iMg03VfaiVXBqocGYadS_PowCLcBGAsYHQ/s16000/Gizonezkoak%2BDS.jpg" width="300" height="300"></div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Itxi - Cerrar</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#DS-Gizonezkoak-masculino").on("hidden.bs.modal", function () {    var html = $( "#DS-Gizonezkoak-masculino_body" ).html();    $( "#DS-Gizonezkoak-masculino_body" ).empty();    $( "#DS-Gizonezkoak-masculino_body" ).append(html);  })});</script></div>
+
+	<script>
+	if (typeof OpenModal === 'undefined') {
+		OpenModal = function(modalName) {
+			if ($('#' + modalName).length)
+				$('#' + modalName).modal('show');
+			else
+				alert("Sorry, but there is no modal for " + modalName);
+		}
+	}
+
+	function modalSetCookie(cname, cvalue, exdays) {
+		var d = new Date();
+		d.setTime(d.getTime() + (exdays*24*60*60*1000));
+		var expires = "expires="+ d.toUTCString();
+		document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+	}
+
+	function modalGetCookie(cname) {
+		var name = cname + "=";
+		var decodedCookie = decodeURIComponent(document.cookie);
+		var ca = decodedCookie.split(';');
+		for(var i = 0; i <ca.length; i++) {
+			var c = ca[i];
+			while (c.charAt(0) == ' ') {
+				c = c.substring(1);
+			}
+			if (c.indexOf(name) == 0) {
+				return c.substring(name.length, c.length);
+			}
+		}
+		return "";
+	}
+	</script>
+
+</section>
+
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="1274">
+
+	<style>
+	/* Let's not animate the contents of modal windows */
+	.no-anim {
+		-webkit-animation: none !important;
+		-moz-animation: none !important;
+		-o-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+	}
+	</style>
+
+	
+	
+	<div><div class="modal fade" id="DS-emkumezkoak-femenino" tabindex="-1" role="dialog" aria-labelledby="DS-emkumezkoak-femeninoLabel" aria-hidden="true">  <div class="modal-dialog  modal-dialog-centered" style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="DS-emkumezkoak-femeninoLabel">DS emakumezkoen neurriak - Medidas femeninas DS</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="DS-emkumezkoak-femenino_body"><img src="https://1.bp.blogspot.com/-r1FExadjIhI/X7z4sSdNhwI/AAAAAAAA1cU/GvZ9lo_3rDMIfw9j3BjoGBJvqQ2aak70ACLcBGAsYHQ/s16000/Emakum%2BDS.jpg" width="300" height="300"></div><div class="modal-footer"><div class="mbr-section-btn"><a href="#" class="no-anim btn btn-secondary display-4" data-dismiss="modal">Itxi - Cerrar</a></div></div>    </div>  </div></div><script>document.addEventListener("DOMContentLoaded", function() {  $("#DS-emkumezkoak-femenino").on("hidden.bs.modal", function () {    var html = $( "#DS-emkumezkoak-femenino_body" ).html();    $( "#DS-emkumezkoak-femenino_body" ).empty();    $( "#DS-emkumezkoak-femenino_body" ).append(html);  })});</script></div>
+
+	<script>
+	if (typeof OpenModal === 'undefined') {
+		OpenModal = function(modalName) {
+			if ($('#' + modalName).length)
+				$('#' + modalName).modal('show');
+			else
+				alert("Sorry, but there is no modal for " + modalName);
+		}
+	}
+
+	function modalSetCookie(cname, cvalue, exdays) {
+		var d = new Date();
+		d.setTime(d.getTime() + (exdays*24*60*60*1000));
+		var expires = "expires="+ d.toUTCString();
+		document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+	}
+
+	function modalGetCookie(cname) {
+		var name = cname + "=";
+		var decodedCookie = decodeURIComponent(document.cookie);
+		var ca = decodedCookie.split(';');
+		for(var i = 0; i <ca.length; i++) {
+			var c = ca[i];
+			while (c.charAt(0) == ' ') {
+				c = c.substring(1);
+			}
+			if (c.indexOf(name) == 0) {
+				return c.substring(name.length, c.length);
+			}
+		}
+		return "";
+	}
+	</script>
+
 </section>
 
 <section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="951">
@@ -1110,7 +1216,7 @@ UA-26459329-1
 </a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
