--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/index-meta.jpeg">
+  <meta property="og:image" content="assets/images/index-meta.jpeg">
+  <meta name="twitter:title" content="Denda-Tienda">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo.gif" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Buruntzaldea Igeriketa Taldearen ekipaiaren erosketarako denda. 
+Tienda para la compra de equipación del Club de Natación Buruntzaldea">
   
   
   <title>Denda-Tienda</title>
@@ -405,7 +410,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="2229">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="14">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -458,7 +463,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="2230">
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="15">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -511,7 +516,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="2231">
+<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="16">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -564,7 +569,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="2232">
+<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="17">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -1210,7 +1215,7 @@
 </a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
