--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VFN03ZPQQC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VFN03ZPQQC');
+</script>
+
   <!-- Facebook Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
@@ -410,7 +419,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="14">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="635">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -463,7 +472,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="15">
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="636">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -516,7 +525,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="16">
+<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="637">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -569,7 +578,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="17">
+<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="638">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
