--- a/ordainduta.html
+++ b/ordainduta.html
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak-oportunidades.html" aria-expanded="false">Aukerak | Oportunidades</a></li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-46" aria-expanded="false">Poltsak | Bolsas</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-47" aria-expanded="false">Bainujantziak | Bañadores</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-48" aria-expanded="false">Igerilekuko Arropa | Ropa de Piscina</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services1-49" aria-expanded="false">Kaleko Arropa | Ropa de Calle</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#services4-4a" aria-expanded="false">Txanoak | Gorros</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="aukerak-oportunidades.html" aria-expanded="false">Aukerak | Oportunidades</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html#musukoa" aria-expanded="false">Musukoa | Mascarilla</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="http://www.buruntzaldeaikt.eus"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span></a>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" style="margin-left:10px" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -153,7 +153,7 @@
 </a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
