--- a/Lege-Oharra.html
+++ b/Lege-Oharra.html
@@ -151,7 +151,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary-outline display-4" href="index.html#top"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Dendara itzuli - Volver a la tienda</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary-outline display-4" href="index.html#top"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Dendara itzuli</a> <a class="btn btn-secondary-outline display-4" href="aukerak-oportunidades.html"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Eskaintzetara joan</a></div>
             </div>
         </div>
     </div>
