--- a/Nota-Legal.html
+++ b/Nota-Legal.html
@@ -154,7 +154,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary-outline display-4" href="index.html#top"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Dendara itzuli - Volver a la tienda</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary-outline display-4" href="index.html"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Volver a la tienda</a> <a class="btn btn-secondary-outline display-4" href="aukerak-oportunidades.html"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Ir a las ofertas</a></div>
             </div>
         </div>
     </div>
@@ -178,7 +178,7 @@
 </a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
