--- a/stock.html
+++ b/stock.html
@@ -130,7 +130,7 @@ El producto solicitado no tiene mas existencias.">
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="index.html#top"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Dendara Itzuli - Volver a la Tienda</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="index.html"><span class="mbri-shopping-bag mbr-iconfont mbr-iconfont-btn"></span>Dendara - A la Tienda</a> <a class="btn btn-primary display-4" href="aukerak-oportunidades.html"><span class="mbri-sale mbr-iconfont mbr-iconfont-btn"></span>Eskaintzetara - A ofertas</a></div>
             </div>
         </div>
     </div>
@@ -154,7 +154,7 @@ El producto solicitado no tiene mas existencias.">
 </a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
