--- a/Nota-Legal.html
+++ b/Nota-Legal.html
@@ -160,7 +160,7 @@
     </div>
 </section>
 
-<section class="cid-shfltoiiOM" id="footer2-6e">
+<section class="cid-sr9NXfP0eg" id="footer2-6y">
 
     
 
@@ -170,15 +170,14 @@
         <div class="media-container-row content mbr-white">
             <div class="col-12 col-md-3 mbr-fonts-style display-4">
                 <p class="mbr-text"><strong>Helbidea - Dirección</strong>&nbsp;<br>Beko Kale Bidea 1, 2. solairua<br>20160 Lasarte-Oria<br>
-                    Gipuzkoa, Euskal Herria<br><br><strong>Kontaktua-Contacto</strong><br>Email: info@buruntzaldeaikt.eus&nbsp;<br>Telef./WhatsApp: 696 506 632<br></p>
+                    Gipuzkoa, Euskal Herria<br><br><strong>Kontaktua-Contacto</strong><br>Email: info@buruntzaldeaikt.eus&nbsp;<br>Telef./WhatsApp: 696 506 632<br><br><strong>Legezko oharra</strong><br>·&gt;&nbsp;<a href="Lege-Oharra.html" class="text-white">Lege Oharra eta Pribatutasun Politika</a> 
+<br><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-4">
-                <p class="mbr-text"><strong>BEREZIAK-ESPECIALES</strong>&nbsp;<br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a> 
-<br><a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria - Trofeo Lasarte</a><br><br><a href="Lege-Oharra.html" class="text-white text-primary">Lege Oharra eta Pribatutasun Politika
-</a><br><a href="Nota-Legal.html" class="text-white text-primary">Nota Legal y Política de Privacidad</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
+                <p class="mbr-text"><strong>Bereziak-Especiales</strong>&nbsp;<br><a href="https://www.buruntzaldeaikt.eus/" class="text-white">Webgunea</a>&nbsp;| <a href="https://www.es.buruntzaldeaikt.eus/" class="text-white">Web</a><br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a>&nbsp;|&nbsp;<a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria | Trofeo Lasarte</a><br><a href="https://dleht.buruntzaldeaikt.eus/" class="text-white" target="_blank">DLEHT</a> | <a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank">CEHLD</a><br><br><a href="https://www.buruntzaldeaikt.eus/dohaintzak.html" class="text-white" target="_blank">Dohaintzak</a> | <a href="https://www.es.buruntzaldeaikt.eus/donaciones.html" class="text-white" target="_blank">Donaciones</a><a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank"><br></a><br><strong>Aviso legal</strong><br>·&gt; <a href="Nota-Legal.html" class="text-white">Nota Legal y Política de Privacidad</a><br><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
@@ -190,7 +189,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2020 Buruntzaldea IKT - All Rights Reserved
+                        © Copyright 2021 Buruntzaldea IKT - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
