--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">online denda - tienda online</h4>
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Gure dendako orainketak PayPal zerbitzari seguruaren bidez egiten dira, bai Paypal bidez eta baita banku txartel bidez ere.<br><br><em>Los pagos de nuestra tienda se realizan mediante el servidor seguro de PayPal, bien mediante PayPal o bien mediante tarjeta bancaria.</em></p>
+                        Gure dendako ordainketak PayPal zerbitzari seguruaren bidez egiten dira, bai Paypal bidez eta baita banku txartel bidez ere.<br><br><em>Los pagos de nuestra tienda se realizan mediante el servidor seguro de PayPal, bien mediante PayPal o bien mediante tarjeta bancaria.</em></p>
                 </div>
             </div>
 
@@ -1319,7 +1319,7 @@ document.addEventListener("DOMContentLoaded", function() {
                 <p class="mbr-text"><strong>Bereziak-Especiales</strong>&nbsp;<br><a href="https://www.buruntzaldeaikt.eus/" class="text-white">Webgunea</a>&nbsp;| <a href="https://www.es.buruntzaldeaikt.eus/" class="text-white">Web</a><br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a>&nbsp;|&nbsp;<a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria | Trofeo Lasarte</a><br><a href="https://dleht.buruntzaldeaikt.eus/" class="text-white" target="_blank">DLEHT</a> | <a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank">CEHLD</a><br><br><a href="https://www.buruntzaldeaikt.eus/dohaintzak.html" class="text-white" target="_blank">Dohaintzak</a> | <a href="https://www.es.buruntzaldeaikt.eus/donaciones.html" class="text-white" target="_blank">Donaciones</a><a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank"><br></a><br><strong>Aviso legal</strong><br>·&gt; <a href="Nota-Legal.html" class="text-white">Nota Legal y Política de Privacidad</a><br><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
