--- a/aukerak-oportunidades.html
+++ b/aukerak-oportunidades.html
@@ -119,12 +119,12 @@ Productos con precios especiales. Últimas existencias.">
                     <img src="assets/images/8678-696x850.jpg" alt="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TALDEKO POLTSA<div>maleta del club</div></h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TALDEKO POLTSA - <em>AZKEN ALEAK</em><div>maleta del club - <em>últimas unidades</em></div></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">
                             Taldeko poltsa ofiziala. Txankletak eta arropa hezeak gordetzeko konpartimentua dakar eta objektu pertsonalak gordetzeko poltsikoa ere bai.<br><br><em>Maleta oficial del club. Trae compartimento para chancletas y ropa húmeda y también un pequeño bolsillo para objetos.</em><br>
                         </p>
-                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€10,00</strong> <span class="cost">€30,00</span>
+                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€8,00</strong> <span class="cost">€30,00</span>
                         </p>
                     </div>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -156,7 +156,7 @@ Productos con precios especiales. Últimas existencias.">
                     <img src="assets/images/barri-kamixeta-791x635.jpg" alt="BARRI BIKT" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">IGERILEKUKO KAMIXETA BARRI<br>camiseta de piscina BARRI</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">IGERILEKUKO KAMIXETA BARRI - <em>AZKEN ALEAK</em><br>camiseta de piscina BARRI - <em>últimas unidades</em></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Taldeko kamixeta ofiziala. Bere osaketagatik, txapelketetan igerileku barruan erabiltzeko kamixeta teknikoa. Azkar lehortzen da.<br><br><em>Camiseta oficial del club. Por su composición, camiseta técnica para utilizar dentro de la piscina en competición. Secado rápido.</em><br>
                         </p>
@@ -205,11 +205,11 @@ Productos con precios especiales. Últimas existencias.">
                     <img src="assets/images/txandala-txaketa-2-844x602.jpg" alt="Txaketa BIKT" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TXANDAL TXAKETA BARRI<br>chaqueta chándal BARRI</h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TXANDAL TXAKETA BARRI - <em>AZKEN ALEAK</em><br>chaqueta chándal BARRI - <em>últimas unidades</em></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Taldeko txandalaren txaketa ofiziala. Txapelketarako joan etorrietarako zein igerileku barruan erabiltzeko beharrezkoa. Galtzak bi poltsiko ditu eta kremailerak txorkatiletan. Txaketak kremalleradun bi poltsiko ditu.<br><br><em>Chaqueta del chándal oficial del club. Necesario para las idas y venidas de competición y para el interior de la piscina en caso de necesitar mas calor. El pantalón tiene dos bolsillos laterales y cremallera en los tobillos. La chaqueta trae dos bolsillos con cremallera.</em><br>
                         </p>
-                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€10,00</strong>&nbsp;<span class="cost">€23,00</span></p>
+                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€8,00</strong>&nbsp;<span class="cost">€23,00</span></p>
                     </div>
                   <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -247,12 +247,11 @@ Productos con precios especiales. Últimas existencias.">
                     <img src="assets/images/txandala-galtza-240x882.jpg" alt="Galtza BIKT" title="">
                 </div>
                 <div class="align-left aside-content">
-                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TXANDAL GALTZA BARRI
-<div>pantalón chándal BARRI</div></h2>
+                    <h2 class="mbr-title pt-2 mbr-fonts-style display-5">TXANDAL GALTZA BARRI - <em>AZKEN ALEAK</em><div>pantalón chándal BARRI - <em>últimas unidades</em></div></h2>
                     <div class="mbr-section-text">
                         <p class="mbr-text text1 pt-2 mbr-light mbr-fonts-style display-7">Taldeko txandalaren galtza ofiziala. Txapelketarako joan etorrietarako zein igerileku barruan erabiltzeko beharrezkoa. Galtzak bi poltsiko ditu eta kremailerak txorkatiletan. Txaketak kremalleradun bi poltsiko ditu.<br><br><em>Pantalón del chándal oficial del club. Necesario para las idas y venidas de competición y para el interior de la piscina en caso de necesitar mas calor. El pantalón tiene dos bolsillos laterales y cremallera en los tobillos. La chaqueta trae dos bolsillos con cremallera.&nbsp;</em><br>
                         </p>
-                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€10,00</strong>&nbsp;<span class="cost">€25,00</span></p>
+                        <p class="mbr-text text2 pt-4 mbr-light mbr-fonts-style display-2"><strong>€8,00</strong>&nbsp;<span class="cost">€25,00</span></p>
                     </div>
                   <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
