--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">TALDEKO POLTSA<br>maleta del club</h4>
-                            <p class="card-title mbr-fonts-style display-2"><strong>
-                            10,00 €</strong></p>
+                            <p class="card-title mbr-fonts-style display-2"><strong>8,00 €</strong></p>
                         <p class="mbr-text mbr-fonts-style display-7">Taldeko poltsa ofiziala. Txankletak eta arropa hezeak gordetzeko konpartimentua dakar eta objektu pertsonalak gordetzeko poltsikoa ere bai.
 <br><br><em>Maleta oficial del club. Trae compartimento para chancletas y ropa húmeda y también un pequeño bolsillo para objetos.</em><br><em><br></em></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -788,10 +787,10 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 </select> </td></tr>
 </tbody></table>
 <input type="hidden" name="currency_code" value="EUR">
-                        <br>
 <input type="image" src="https://1.bp.blogspot.com/-zdsl528oiDo/XP1m98a2qbI/AAAAAAAAqLA/AChVBtFBCg0ZTHqOaT0Ww0OaVvkOY8RowCLcBGAs/s1600/Sin%2Bt%25C3%25ADtulo-1%2Bcopia.png" border="0" name="submit" alt="PayPal, la forma rápida y segura de pagar en Internet.">
 <img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
-</form>  
+</form>
+  
                       <!--Btn-->
                         
                     </div>
