--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 <table>
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
 	<option value="XXL">XXL €20,00 EUR</option>
-	<option value="S">S €20,00 EUR</option>
 	<option value="XS">XS €20,00 EUR</option>
 	<option value="XXS">XXS €20,00 EUR</option>
 	<option value="T6">T6 €20,00 EUR</option>
@@ -371,7 +370,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="93">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="427">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -424,7 +423,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="94">
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="428">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -477,7 +476,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="95">
+<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="429">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -530,7 +529,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="96">
+<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="430">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -607,8 +606,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
                             KAMIXETA TEKNIKOA&nbsp;<br>camiseta técnica</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Taldeko kamixeta ofiziala. Bere osaketagatik, txapelketetan igerileku barruan erabiltzeko kamixeta teknikoa. Azkar lehortzen da.
-<br><br><em>Camiseta oficial del club. Por su composición, camiseta técnica para utilizar dentro de la piscina en competición. Secado rápido.</em><br><em><br></em></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Taldeko kamixeta ofiziala. Bere osaketagatik, txapelketetan igerileku barruan erabiltzeko kamixeta teknikoa. Azkar lehortzen da.<br><br><em>Camiseta oficial del club. Por su composición, camiseta técnica para utilizar dentro de la piscina en competición. Secado rápido.</em><br><em><br></em></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="T86BPXGRCYLU4">
@@ -639,8 +637,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
                             GALTZA MOTZAK<br>pantalón corto</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Taldeko galtza motz ofiziala. Bere osaketagatik, txapelketetan igerileku barruan erabiltzeko galtza motz teknikoa. Azkar lehortzen da. Poltsikoduna.
-<br><br><em>Pantalón corto oficial del club. Por su composición, pantalón corto técnico para utilizar dentro de la piscina en competición. Secado rápido. Tiene bolsillos.</em><br><em><br></em></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Taldeko galtza motz ofiziala. Bere osaketagatik, txapelketetan igerileku barruan erabiltzeko galtza motz teknikoa. Azkar lehortzen da. Poltsikoduna.<br><br><em>Pantalón corto oficial del club. Por su composición, pantalón corto técnico para utilizar dentro de la piscina en competición. Secado rápido. Tiene bolsillos.</em><br><em><br></em></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="UY5MWR25NVC3W">
@@ -648,7 +645,6 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
 	<option value="L">L €17,00 EUR</option>
 	<option value="XS">XS €17,00 EUR</option>
-	<option value="12">12 €17,00 EUR</option>
 	<option value="8">8 €17,00 EUR</option>
 	<option value="6">6 €17,00 EUR</option>
 </select> </td></tr>
@@ -734,7 +730,6 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 <input type="image" src="https://1.bp.blogspot.com/-zdsl528oiDo/XP1m98a2qbI/AAAAAAAAqLA/AChVBtFBCg0ZTHqOaT0Ww0OaVvkOY8RowCLcBGAs/s1600/Sin%2Bt%25C3%25ADtulo-1%2Bcopia.png" border="0" name="submit" alt="PayPal, la forma rápida y segura de pagar en Internet.">
 <img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
 </form>
-<p></p>
                         <!--Btn-->
                         
                     </div>
@@ -886,8 +881,6 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
 	<option value="XXL">XXL €22,00 EUR</option>
     <option value="XL">XL €22,00 EUR</option>
-	<option value="M">M €22,00 EUR</option>
-	<option value="S">S €22,00 EUR</option>
 	<option value="10">10 €22,00 EUR</option>
 	<option value="8">8 €22,00 EUR</option>
 	<option value="6">6 €22,00 EUR</option>
