--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="776">
+<section class="mbr-section" id="witsec-modal-window-block-6j" data-rv-view="45">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -423,7 +423,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="777">
+<section class="mbr-section" id="witsec-modal-window-block-6i" data-rv-view="46">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -476,7 +476,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="778">
+<section class="mbr-section" id="witsec-modal-window-block-6g" data-rv-view="47">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -529,7 +529,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="779">
+<section class="mbr-section" id="witsec-modal-window-block-6h" data-rv-view="48">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -931,15 +931,22 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
 <input type="hidden" name="hosted_button_id" value="58R2L7B6UPKFA">
 <table>
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
-	 <option value="12">12 €22,00 EUR</option>
-     <option value="10">10 €22,00 EUR</option>
+	<option value="XXL">XXL €22,00 EUR</option>
+	<option value="XL">XL €22,00 EUR</option>
+	<option value="L">L €22,00 EUR</option>
+	<option value="M">M €22,00 EUR</option>
+	<option value="S">S €22,00 EUR</option>
+	<option value="12">12 €22,00 EUR</option>
+	<option value="10">10 €22,00 EUR</option>
+	<option value="8">8 €22,00 EUR</option>
+	<option value="6">6 €22,00 EUR</option>
 </select> </td></tr>
 </tbody></table>
 <input type="hidden" name="currency_code" value="EUR">
-                        <br>
 <input type="image" src="https://1.bp.blogspot.com/-zdsl528oiDo/XP1m98a2qbI/AAAAAAAAqLA/AChVBtFBCg0ZTHqOaT0Ww0OaVvkOY8RowCLcBGAs/s1600/Sin%2Bt%25C3%25ADtulo-1%2Bcopia.png" border="0" name="submit" alt="PayPal, la forma rápida y segura de pagar en Internet.">
 <img alt="" border="0" src="https://www.paypalobjects.com/es_ES/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
                         <!--Btn-->
                         
@@ -1154,7 +1161,7 @@ Tienda para la compra de equipación del Club de Natación Buruntzaldea">
                 <p class="mbr-text"><strong>Beste guneak - Otros sitios</strong><br><a href="https://www.buruntzaldeaikt.eus/" class="text-white">Web Nagusia</a>&nbsp;| <a href="https://www.es.buruntzaldeaikt.eus/" class="text-white">Web Principal</a><br><a href="https://www.albisteak.buruntzaldeaikt.eus" class="text-white" target="_blank">Blog-a EUS</a>&nbsp;|&nbsp;<a href="https://noticiasbikt.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Blog CAS</a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank">Lasarteko Saria | Trofeo Lasarte</a><br><a href="https://dleht.buruntzaldeaikt.eus/" class="text-white" target="_blank">DLEHT</a> | <a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank">CEHLD</a><br><br><a href="https://www.buruntzaldeaikt.eus/dohaintzak.html" class="text-white" target="_blank">Dohaintzak</a> | <a href="https://www.es.buruntzaldeaikt.eus/donaciones.html" class="text-white" target="_blank">Donaciones</a><a href="https://cehld.buruntzaldeaikt.eus/" class="text-white" target="_blank"><br></a><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white text-primary" target="_blank"><br></a><br><strong>Aviso legal</strong><br><a href="Nota-Legal.html" class="text-white">Nota Legal y Política de Privacidad</a><br><a href="https://www.lasartekosaria.buruntzaldeaikt.eus" class="text-white"><br></a></p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCt1265A4qvZy9HKUeA8J15AOC4SrCyZe4&amp;q=Buruntzaldea IKT" allowfullscreen=""></iframe></div>
             </div>
         </div>
         <div class="footer-lower">
